--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "steam-pkg-hook",
   "version": "1.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/STEAM201/steam-pkg-hook"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
